[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/GUIs/EndScene.gd" type="Script" id=1]
[ext_resource path="res://assets/Tests/test/test_enemy/test_stay_enemy.png" type="Texture" id=2]
[ext_resource path="res://assets/GUIs/Pause menu/MM hover.png" type="Texture" id=3]
[ext_resource path="res://assets/GUIs/Pause menu/MM normal.png" type="Texture" id=4]
[ext_resource path="res://assets/GUIs/Pause menu/MM pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/GUIs/Main menu/exit normal.png" type="Texture" id=6]
[ext_resource path="res://assets/GUIs/Main menu/exit hover.png" type="Texture" id=7]
[ext_resource path="res://assets/GUIs/Pause menu/settings hover.png" type="Texture" id=8]
[ext_resource path="res://assets/GUIs/Pause menu/settings normal.png" type="Texture" id=9]
[ext_resource path="res://assets/GUIs/Main menu/exit pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/GUIs/Pause menu/settings pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/misc/PartyConfettiRegular-eZOn3.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/GUIs/Pause menu/restart normal.png" type="Texture" id=13]
[ext_resource path="res://assets/GUIs/Pause menu/restart pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/GUIs/Pause menu/restart hover.png" type="Texture" id=15]
[ext_resource path="res://assets/Tests/test/test_enemy/test_enemy_fly.png" type="Texture" id=16]
[ext_resource path="res://assets/misc/void_bg.png" type="Texture" id=17]
[ext_resource path="res://assets/SFXs/SFXs/Into the Depths (Sting) - Jingle Punks.mp3" type="AudioStream" id=18]
[ext_resource path="res://assets/misc/Skull.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 80
extra_spacing_char = 10
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 12 )

[node name="EndScene" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 0.352941, 1, 0.717647, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 17 )
expand = true

[node name="name" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -296.0
margin_right = 224.0
margin_bottom = -231.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1

[node name="score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -168.0
margin_right = 224.0
margin_bottom = -103.0
custom_fonts/font = SubResource( 2 )
text = "Score: 100"
align = 1
valign = 1

[node name="TS" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -40.0
margin_right = 224.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "Time Survivrd: "
align = 1
valign = 1

[node name="flyK" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = 88.0
margin_right = -128.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 2 )
text = "x 100"
align = 1
valign = 1

[node name="stayK" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 256.0
margin_top = 88.0
margin_right = 384.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 2 )
text = "x 100"
align = 1
valign = 1

[node name="TestEnemyFly" type="Sprite" parent="."]
position = Vector2( 320, 488 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 16 )

[node name="TestStayEnemy" type="Sprite" parent="."]
position = Vector2( 840, 476.075 )
scale = Vector2( 0.320614, 0.311025 )
texture = ExtResource( 2 )

[node name="Skull" type="Sprite" parent="."]
position = Vector2( 376, 496 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 19 )

[node name="Skull2" type="Sprite" parent="."]
position = Vector2( 888, 496 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 19 )

[node name="restart" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = 256.0
margin_right = -280.0
margin_bottom = 304.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )

[node name="settings" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = 256.0
margin_right = -32.0
margin_bottom = 304.0
disabled = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 11 )

[node name="mainmenu" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 256.0
margin_right = 232.0
margin_bottom = 304.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )

[node name="exit" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 280.0
margin_top = 256.0
margin_right = 480.0
margin_bottom = 304.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -18.0

[node name="TimeSurvivedTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="mainmenu" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="TimeSurvivedTimer" to="." method="_on_TimeSurvivedTimer_timeout"]
